--- a/config-client/config-client-prod.yml
+++ b/config-client/config-client-prod.yml
@@ -19,6 +19,9 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
 
+  profiles: prod
+  application: 
+    name: config-client
 
 eureka:
   client:
