--- a/config-client/config-client-prod.yml
+++ b/config-client/config-client-prod.yml
@@ -1,7 +1,7 @@
 spring:
   profiles: prod
   application:
-    name: user-service-provider
+    name: student-service-provider
   zipkin:
     base-url: http://localhost:9530  # zipkin服务端地址
   sleuth:
